# machine-learning

./: .gitignore  LICENSE  Procfile  README.md  changelog.md  clustering.R  contributors.md  convert_to_html.py  convert_to_knowledge_repo.py  converter.py  metric.R  repo_requirements.txt  requirements.txt
AB_test/: AB_test.R  AB_test.Rmd  AB_test.html
Coursera/: machine-learning.R  machine-learning.Rmd  machine-learning.html  machine-learning.md
ROC/: ROC.R
ab_tests/: frequentist_ab_test.html  frequentist_ab_test.ipynb
ad/: gsp_ad_auction.html  gsp_ad_auction.ipynb
airbnb_knowledge_repo_setup/: README.md  header_template.yaml  knowledge_repo_aliases.bash  knowledge_repo_converter.py
association_rule/: apriori.Rmd  apriori.html  apriori.ipynb  association_rule.ipynb
bandits/: multi_armed_bandits.html  multi_armed_bandits.ipynb
big_data/: .gitignore  h2o_api_walkthrough.ipynb  local_hadoop.md  spark_crime.html  spark_crime.ipynb  spark_installation.md  spark_partitions.html  spark_partitions.ipynb  spark_pca.html  spark_pca.ipynb
clustering/: .gitignore  TFIDF.ipynb  clustering.R  clustering.Rmd  clustering.html  clustering.md  clustering_functions.R  kmeans.html  kmeans.ipynb  kmeanspp.R
data_science_is_software/: .gitignore
deep_learning/: .gitignore  cnn.ipynb  cnn_image_tensorflow.html  cnn_image_tensorflow.ipynb  nn_tensorflow.html  nn_tensorflow.ipynb  softmax.html  softmax.ipynb  (+5 more)
model_deployment/gbt_inference/gbt_inference/: CMakeLists.txt
model_deployment/gbt_inference/gbt_inference/src/: m2cgen.cpp  m2cgen.hpp  main.cpp  xgb.cpp  xgb.hpp
(+620 files in other folders)
